karnc/tests/fixtures/negative/76_call_nonexistent_service/src/commerce/orders.karn
context commerce.orders

consumes commerce.payment

service placeOrder {
  on call(total: Int) -> Effect[Result[Int, Int]] {
    let _ <- commerce.payment.nonExistent(total)
    Effect.pure(Ok(total))
  }
}
